--- a/public/pages/Login.html
+++ b/public/pages/Login.html
@@ -4,23 +4,25 @@
 </head>
 <body>
 	<div>
-		<form method="post" novalidate name="signinForm" id="index" ng-submit="signin()">
+		<form method="post" novalidate name="signinForm" id="index" ng-submit="signin(signinForm.$valid)">
 		<legend>Login</legend>		
 		<div class="control-group">
-	        <label class="control-label">Username</label>
+	        <label class="control-label">Username<span class="text-error">*</span></label>
 			<div class="controls">
 			    <div class="input-prepend">
 				<span class="add-on"><i class="icon-user"></i></span>
-					<input type="text" class="input-xlarge" id="uname" name="uname" placeholder="User Name" ng-model="user.uname">
+					<input type="text" class="input-xlarge" id="uname" name="uname" placeholder="User Name" ng-model="user.uname" required>
+					<span class='help-inline' ng-show='signinForm.uname.$invalid && submitted'>Opps! You forgot to enter username.</span>
 				</div>
 			</div>
 		</div>
 		<div class="control-group">
-          <label class="control-label">Password</label>
+          <label class="control-label">Password<span class="text-error">*</span></label>
 			<div class="controls">
 			    <div class="input-prepend">
 				<span class="add-on"><i class="icon-lock"></i></span>
-					<input type="Password" id="passwd" class="input-xlarge" name="passwd" placeholder="Password" ng-model="user.passwd">
+					<input type="Password" id="passwd" class="input-xlarge" name="passwd" placeholder="Password" ng-model="user.passwd" required>
+					<span class='help-inline' ng-show='signinForm.passwd.$invalid && submitted'>Opps! You forgot to enter password.</span>
 				</div>
 			</div>
 		</div>
@@ -32,8 +34,13 @@
 	       <button type="submit" class="btn btn-success" rel="tooltip" title="Login">Login</button>
 	       
 </div>
-	<span class="text-error">{{message}}</span>
+	 
 	</div>
+		<div class="alert alert-danger " ng-show='ErrorFlag'>
+			<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+			<span col-md-6 ng-bind='errorMessage'></span>
+		</div>
+		
 	</form>
 		<div class="control-group">	
          <a href='#signup'>New signUp</a>
