--- a/public/pages/bookList.html
+++ b/public/pages/bookList.html
@@ -17,9 +17,9 @@ Developed by Arijit Chatterjee -->
                 
 
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#adduser"><i class="fa fa-shield"></i> Add User</a></li>
-                    <li><a href="#addBook"><i class="fa fa-comment"></i> Add Book </a></li>
-                    <li><a href="#transaction"><i class="fa fa-sign-in"></i> Transaction</a></li>
+                    <li><a href="adduser"><i class="fa fa-shield"></i> Add User</a></li>
+                    <li><a href="addBook"><i class="fa fa-comment"></i> Add Book </a></li>
+                    <li><a href="transaction"><i class="fa fa-sign-in"></i> Transaction</a></li>
                 </ul>
             </div>
             </nav>
