add validation in user page

--- a/public/pages/Login.html
+++ b/public/pages/Login.html
@@ -44,7 +44,7 @@
 		
 	</form>
 		<div class="control-group">	
-         <a href='#signup'>New signUp</a>
+         <a href='signup'>New signUp</a>
 		</div>
 	</div>
 </body>
